diesel_compile_tests/tests/fail/returning_cannot_be_called_twice.stderr
error[E0599]: no method named `returning` found for struct `DeleteStatement<table, WhereClause<Grouped<Eq<name, Bound<Text, &str>>>>, ReturningClause<id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:22:11
   |
22 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method

error[E0599]: no method named `returning` found for struct `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<name, Bound<Text, &String>>>,), table>, Insert, ReturningClause<id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:27:11
   |
27 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method

error[E0599]: no method named `returning` found for struct `UpdateStatement<table, NoWhereClause, Assign<ColumnWrapperForUpdate<name>, Bound<Text, &str>>, ReturningClause<id>>` in the current scope
  --> tests/fail/returning_cannot_be_called_twice.rs:30:11
   |
30 |     query.returning(name);
   |           ^^^^^^^^^ private field, not a method
